--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,37 @@
 # .gitignore
 
-# SQLite databases and journals
-# *.sqlite3
+# Virtual Environment
+bin/
+include/
+lib/
+lib64/
+pyvenv.cfg
+share/
+*.cfg
+
+# Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+
+# SQLite journals (but keep db.sqlite3)
 *.sqlite3-journal
+
+# OS files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Django
+*.log
+local_settings.py
